Episode 02 - Igniting Our App folger Added

--- a/Episode 01 - Inception/Code/index.html
+++ b/Episode 01 - Inception/Code/index.html
@@ -24,6 +24,6 @@
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     ></script>
 
-    <script src="./app.js"></script>
+    <script src="./App.js"></script>
   </body>
 </html>
